# uncrustable

./: .gitignore  Cargo.toml  README.md  build-dev.sh  build-wasm.sh
.github/: CODEOWNERS
.github/workflows/: deploy.yml  rust.yml  wasm.yml
doc/: architecture.md  semantics.md  syntax.md  types.md  user-guide.md  web.md  webui-architecture.md
example-programs/: div3.un  ends-with-zero.un  odd-length.un
exmaples/: example.crust
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wasm-build.md
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css
frontend/src/components/: AutomataEditor.tsx  EditorTabs.tsx  Footer.tsx  Header.tsx  Mermaid.tsx  Monaco-Editor.ts  ThemeToggle.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/wasm/: RustCore.ts  automata.ts
src/: codegen.rs  dfa.rs  enumerate.rs  eval.rs  lib.rs  parse.rs  syntax.rs  typecheck.rs
src/dfa/: parser.rs
tests/: booleans_test.rs  numbers_test.rs  variables_test.rs
web/: README.md  deploy.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  web-dev.md
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AutomataEditor.tsx  Footer.tsx  Header.tsx  Mermaid.tsx  MermaidEditor.tsx  ThemeToggle.tsx
web/src/contexts/: ThemeContext.tsx
web/src/services/: AutomataBridge.ts  Bridge.ts
web/src/wasm/: automata.ts
