[package]
name = "uncrustable"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive", "cargo] }
derive_more = { version = "2.0.1", features = ["full"] }
expect-test = "1.5.1"
internment = "0.8.6"
logos = "0.15.0"
pest = "2.7.15"
pest_derive = "2.7.15"
thiserror = "2"
