[package]
name = "uncrustable"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
expect-test = "1.5.1"
internment = "0.8.6"
logos = "0.15.0"
pest = "2.7.15"
pest_derive = "2.7.15"
log = "0.4"
thiserror = "2"
env_logger = "0.10"
wasm-bindgen = "0.2.90"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
